# bluebikes

./: .gitignore  README.md  blue_bikes_route.csv  blue_bikes_route.geojson  blue_bikes_route_detailed.html  blue_bikes_tsp_route.html  get_osrm_trip.py  index.html  init_osrm.sh  make_distance_matrix.py  parse_stations.py  pixi.toml  pyproject.toml  stations.csv  stations.json  waypoints.csv
bluebikes/local-search/: local_search.py
bluebikes/osrm/: init_osrm.sh
bluebikes/tsp/: get_directions.py  get_osrm_route.py  get_shortest_distance_route.py
outputs/directions/: haversine_route_directions.json  osrm_route_directions.geojson  osrm_route_directions.json  shortest_distance_route_directions.geojson  shortest_distance_route_local_search_directions.geojson  shortest_distance_route_ps2_directions.geojson  shortest_distance_route_ps2_ps5_directions.geojson
outputs/maps/: blue_bikes_tsp_route.html  haversine_map.html  haversine_route_detailed.html  osrm_map.html  osrm_route_detailed.html  shortest_distance_map.html  shortest_distance_route_detailed.html  shortest_distance_route_detailed_369.html  shortest_distance_route_local_search_detailed.html  shortest_distance_route_ps2_detailed.html
outputs/routes/: haversine_route.csv  osrm_route.csv  shortest_distance_route_369.csv  shortest_distance_route_local_search.csv  shortest_distance_route_ps2.csv  shortest_distance_route_ps2_ps5.csv
scripts/local-search/: local_search.py
scripts/preprocessing/: get_stations.sh  make_distance_matrix.py
scripts/tsp/: get_directions.py  get_haversine_route.py  get_optimal_route.py  get_osrm_route.py  get_shortest_distance_route.py  helpers.py
